--- a/src/pages/Home/styles/NamePopup.css
+++ b/src/pages/Home/styles/NamePopup.css
@@ -5,8 +5,8 @@
     padding: 20px;
     position: fixed;
     z-index: 99;
-    top: calc(50% - var(--height) / 2);
-    left: calc(50% - var(--width) / 2);
+    top: calc(50% - var(--height) / 2 - 20px);
+    left: calc(50% - var(--width) / 2 - 20px);
     height: fit-content;
     width: var(--width);
     background-color: var(--white-color);
